plugins {
    id 'java-library'
    id 'maven-publish'
    id 'io.freefair.lombok' version '8.13'
}

group = 'com.selzerj'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
    mavenLocal()
}

publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'geopattern'
            from components.java
        }
    }
}

java {
    sourceCompatibility = "11"
    targetCompatibility = "11"
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.16.0'
    // todo: convert fixture svg and my svg both to png.  compare pngs for equality.  Or just compare svgs?
    testImplementation 'org.apache.xmlgraphics:batik-transcoder:1.18'
    testImplementation 'commons-io:commons-io:2.18.0'
    testImplementation 'org.apache.xmlgraphics:batik-codec:1.18'
//    testImplementation 'commons-codec:commons-codec:1.18'
}

test {
    useJUnitPlatform()
}